objects/PROPOSAL_NI_TYPE__mdt.object
<CustomObject>
    <description>This Meta Data will be used in Case Network Information Request Type functionality.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_NI_Type__c</fullName>
        <label>Proposal_NI_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested__c</fullName>
        <label># Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PROPOSAL NI TYPE</label>
    <pluralLabel>PROPOSAL NI TYPES</pluralLabel>
</CustomObject>